# openai-codex-proxy

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
examples/: accounts.example.json
src/: accounts.rs  admin.rs  cli.rs  config.rs  installation.rs  logins.rs  main.rs  models.rs  proxy.rs  proxy_auth.rs
