[package]
name = "openai-codex-proxy"
version = "0.1.0"
edition = "2024"
description = "OpenAI-compatible proxy for Codex subscription accounts with OAuth login and quota-aware failover"
license = "MIT"
repository = "https://github.com/ravshansbox/openai-codex-proxy"
readme = "README.md"
keywords = ["codex", "openai", "proxy", "oauth"]
categories = ["command-line-utilities", "web-programming::http-server"]

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
codex-backend-client = { git = "https://github.com/openai/codex", subdirectory = "codex-rs/backend-client", version = "0.0.0" }
codex-login = { git = "https://github.com/openai/codex", subdirectory = "codex-rs/login", version = "0.0.0" }
futures-core = "0.3"
futures-util = "0.3"
pin-project-lite = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.46", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }
zstd = "0.13"

[patch.crates-io]
tokio-tungstenite = { git = "https://github.com/openai-oss-forks/tokio-tungstenite", rev = "132f5b39c862e3a970f731d709608b3e6276d5f6" }
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }
